<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Ultimate Tic-Tac-Toe</string>
    <string name="title_activity_main">Ultimate Tic-Tac-Toe</string>
    <string name="action_settings">Settings</string>
    <string name="app_id">734712208475</string>
    <string name="local_multiplayer">Local</string>
    <string name="sign_out">Sign Out</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="multiplayer">Multiplayer</string>
    <string name="pref_two_touch">Two Touch Mode</string>
    <string name="pref_two_touch_summ"></string>
    <string name="settings">Settings</string>
    <string name="achievements">Achievements</string>
    <string name="achievements_not_available">Please sign in to view achievements.</string>
    <string name="singleplayer">Single Player</string>
    <string name="online_multiplayer">Online</string>
    <string name="menu">Menu</string>
    <string name="undo">Undo</string>
    <string name="resume">Resume</string>
    <string name="main_menu">Main Menu</string>

</resources>
