<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#eeeeee"
    android:gravity="center_vertical"
    android:orientation="vertical"
    tools:context=".PauseMenuFragment" >

    <!-- Resume button -->

    <Button
        android:id="@+id/resume_button"
        style="@style/Button.Green"
        android:text="@string/resume" />

    <!-- Settings button -->

    <Button
        android:id="@id/settings_button"
        style="@style/Button.Orange"
        android:text="@string/settings" />

    <!-- Achievements button -->

    <Button
        android:id="@+id/main_menu_button"
        style="@style/Button.Purple"
        android:text="@string/main_menu" />

</LinearLayout>